# ChangeLog for net-misc/nx
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nx/ChangeLog,v 1.29 2008/07/06 20:35:50 maekke Exp $

  06 Jul 2008; Markus Meier <maekke@gentoo.org> nx-3.2.0-r2.ebuild:
  amd64 stable, bug #230147

  03 Jul 2008; Christian Faulhammer <opfer@gentoo.org> nx-3.2.0-r2.ebuild:
  stable x86, security bug 230147

*nx-3.2.0-r2 (30 Jun 2008)

  30 Jun 2008; Bernard Cafarelli <voyageur@gentoo.org> -nx-3.2.0-r1.ebuild,
  +nx-3.2.0-r2.ebuild:
  Security bump, bug #230147

  05 Jun 2008; Peter Volkov <pva@gentoo.org> nx-3.2.0.ebuild:
  amd64 stable, bug #222967.

  29 May 2008; Christian Faulhammer <opfer@gentoo.org> nx-3.2.0.ebuild:
  x86 stable, bug #222967

*nx-3.2.0-r1 (28 May 2008)

  28 May 2008; Bernard Cafarelli <voyageur@gentoo.org> +nx-3.2.0-r1.ebuild:
  Maintenance release bump, minor bugfixes, some patches merged upstream

*nx-3.2.0 (09 Apr 2008)

  09 Apr 2008; Bernard Cafarelli <voyageur@gentoo.org> +nx-3.2.0.ebuild:
  Bump to 3.2.0 tarballs

  03 Apr 2008; Bernard Cafarelli <voyageur@gentoo.org> -nx-3.0.0.ebuild,
  -nx-3.0.0-r1.ebuild, -nx-3.1.0.ebuild:
  Remove vulnerable versions, security bug #210317

  31 Mar 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +files/nx-3.1.0-gcc-4.3.patch, nx-3.1.0-r1.ebuild:
  Fix GCC 4.3 compilation, thanks Martin Väth
  <vaeth@mathematik.uni-wuerzburg.de> in bug #215489

  18 Feb 2008; Christian Faulhammer <opfer@gentoo.org> nx-3.1.0-r1.ebuild:
  stable x86, security bug 210317

*nx-3.1.0-r1 (17 Feb 2008)

  17 Feb 2008; Bernard Cafarelli <voyageur@gentoo.org> +nx-3.1.0-r1.ebuild:
  Security bump, bug #210317

  14 Jan 2008; Bernard Cafarelli <voyageur@gentoo.org> nx-3.0.0.ebuild,
  nx-3.0.0-r1.ebuild, nx-3.1.0.ebuild:
  Add missing inputproto DEPEND, bug #205427

*nx-3.1.0 (14 Dec 2007)

  14 Dec 2007; Bernard Cafarelli <voyageur@gentoo.org> +nx-3.1.0.ebuild:
  Update to 3.1.0 components

*nx-3.0.0-r1 (03 Dec 2007)
