@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/nx
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nx/ChangeLog,v 1.29 2008/07/06 20:35:50 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nx/ChangeLog,v 1.30 2008/07/08 12:07:49 voyageur Exp $
+
+*nx-3.2.0-r3 (08 Jul 2008)
+
+  08 Jul 2008; Bernard Cafarelli <voyageur@gentoo.org> +nx-3.2.0-r3.ebuild:
+  Version bump to fix runtime failure in nxagent on amd64/gcc-4.3. Bug
+  #230923
 
   06 Jul 2008; Markus Meier <maekke@gentoo.org> nx-3.2.0-r2.ebuild:
   amd64 stable, bug #230147
